# jobscouter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QWEN.md  README.md  alembic.ini  bootstrap-web.sh  bootstrap.sh  dev-full.sh  docker-compose.yml  filters.yaml  nginx.conf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_create_jobs_table.py  0002_add_status_and_filter_reason_to_jobs.py  0003_add_search_keyword_to_jobs.py  0004_add_filter_config.py  0005_deduplicate_jobs_search_keywords.py  8a5103463f7b_add_ai_analysis_fields.py
docker/: backend-entrypoint.sh
docs/plans/: 2026-04-08-sse-activity-panel-design.md
src/jobscouter/: __init__.py  analyze_main.py  main.py
src/jobscouter/api/: deps.py  main.py
src/jobscouter/core/: config.py  logging.py  task_registry.py
src/jobscouter/db/: models.py  session.py
src/jobscouter/schemas/: config.py  job.py
src/jobscouter/scrapers/: base.py  remotar.py  remoteok.py
src/jobscouter/services/: analyzer.py  filter.py  (+2 more)
tests/integration/: test_job_model_constraints.py
tests/unit/: test_ai_analyzer_service.py  test_api_main_docs_env.py  test_config_route.py  test_control_route.py  test_ingestion_service.py  test_job_filter_service.py  test_jobs_route.py  test_logging.py  test_profile_enricher.py  test_remotar_scraper.py  test_remoteok_scraper.py
web/: Dockerfile  Makefile  README.md  next.config.ts  package-lock.json  package.json
(+12 files in other folders)
